Replace page and pageSize parameters to limit and offset
