# internal/models/pagination.go
@@ -1,7 +1,7 @@
 package models
 
 type Pagination struct {
-	Page     int `json:"page"`
-	PageSize int `json:"pageSize"`
-	Total    int `json:"total"`
+	Limit  int `json:"limit"`
+	Offset int `json:"offset"`
+	Total  int `json:"total"`
 }
